# feature-attribution-sc

./: .codecov.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  fa_base.yml  old.txt  py37_fa_base.yml  pyproject.toml  requirements.txt
.github/: check_outputs.py
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: check_outputs.yml  test.yml
datasets/: hlca_hvgs.csv  hlca_marker_dict.csv
docs/: api.md  conf.py  developer_docs.md  fa_methods.md  index.md  index.rst  notebooks.rst  requirements.txt  runtime.md  scripts.rst
docs/_autosummary/: scripts.de_utils.plot_correlation.rst  scripts.enrich.rst  scripts.hlca_markers.rst  scripts.plot_correlation.rst  scripts.roc_auc_crispr.rst  scripts.roc_auc_hlca.rst
docs/notebooks/: example.ipynb
docs/source/: modules.rst
feature_attribution_sc/: __init__.py  run_time_measurements.py
feature_attribution_sc/data/: get_data.py  utils.py
feature_attribution_sc/explainers/: mask.py  neutral_input.py
notebooks/: IG_completeness_axiom.ipynb  Mask_SCGEN.ipynb  _output_formatting.ipynb  baselines.ipynb  de_baseline.ipynb  get_tensor_pred_scanvi.ipynb  gini_index_compute.ipynb  hierarchical_clustering.ipynb  make-base-feature.ipynb  mask_hlca.ipynb  mask_scgen.ipynb  mask_scgen_ROAR.ipynb  merge_hlca.ipynb  neutral_input.ipynb  plot_ginis.ipynb  predict_with_HLCA_model.ipynb  prediction-Copy1.ipynb  prediction-Copy1.py  preliminary_lime.ipynb  run_time_measurements_demo.ipynb  scanvi_deep_lift.ipynb  scanvi_feature_permutation.ipynb  scanvi_guided_backpropagation.ipynb  scanvi_saliency.ipynb  scanvi_shapley_sampling.ipynb  subset_hlca.ipynb  task1_agg.ipynb  task1_robustness.ipynb  task2_output_agg.ipynb  task2_scanvi_ablation.ipynb  test_masking.ipynb  train_scgen.ipynb  tutorial.ipynb
scripts/: __init__.py  attribution_analysis.py  attribution_analysis_example.ipynb  benchmarking.py  de_utils.py  gradients.py  job_script_masking.sh  job_script_masking_cpu.sh  mask.py  roar_scgen.py  run_masking.sh  run_time_measurements.py
tests/: test_basic.py
(+71 files in other folders)
