[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "feature_attribution"
version = "0.0.1"
description = "Feature importance methods for single-cell models"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "_"},
]
maintainers = [
    {name = "_", email = "yuge.ji@helmholtz-muenchen.de"},
]
urls.Documentation = "https://feature-attribution.readthedocs.io/"
urls.Source = "https://github.com/yugeji/feature-attribution"
urls.Home-page = "https://github.com/yugeji/feature-attribution"
dependencies = [
                "numpy>=1.14.0",
                "scipy",
                "pandas",
                "statsmodels",
                "anndata",
                "seaborn",
                "matplotlib",
                "gprofiler-official",
                "torch",
                "scikit-learn",
                "scgen",
                "scvi-tools",
                "scanpy",
                "pytorch-lightning",
]

[project.optional-dependencies]
dev = [
    # CLI for bumping the version number
    "bump2version",
    "pre-commit"
]
doc = [
    "sphinx>=4",
    "furo",
    "myst-parser",
    "sphinxcontrib-bibtex>=1.0.0",
    "scanpydoc[typehints]>=0.7.4",
    # For notebooks
    "nbsphinx",
    "ipykernel"
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.coverage.run]
source = ["feature_attribution"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"
